appId: com.crewcam
tags:
  - Practice
  - Finds ID
---
- launchApp:
    clearState: true

- assertVisible: Continue with Email

#Login Flow with Mail

- tapOn: Continue with Email
- assertVisible: Email address
- tapOn: Enter your Email
- inputText: kartik.sharmaa@b
- tapOn: Continue
- assertVisible:
    text: Please enter a valid Email!
    index: 1

- tapOn: Enter your Email

- longPressOn: 'Enter your Email'
- tapOn: 'Select All'
- eraseText

- tapOn: Enter your Email
- inputText: kartik.sharmaa@byldd.com
- tapOn: Continue

- extendedWaitUntil:
    visible: Code sent!
    timeout: 10000

- assertVisible: We've sent an Email with an activation code to your Email ID kartik.sharmaa@byldd.com

- tapOn:
    point: 3%,22%

- inputText: 12345
- tapOn: Verify

- assertVisible:
    text: Enter Valid OTP!
    index: 1

#Resend Otp

- tapOn: Resend Code

- extendedWaitUntil:
    visible: Code sent!
    timeout: 10000

- waitForAnimationToEnd:
    timeout: 10000

- tapOn:
    point: 2%,19%

- inputText: '87133'

- tapOn: Verify
