appId: com.crewcam
tags:
  - Sanity Testing
  - Unit Testing
  - Onbaording Flow
---
- launchApp:
    clearState: true
- launchApp:
    permissions:
      all: allow
      medialibrary: allow
- assertVisible: Continue with Phone Number

#Login Flow with Mail

#Verify validation errors
- tapOn: Continue with Phone Number
- assertVisible: Enter phone number

- tapOn: 🇺🇸, +1
- assertVisible: Search your country
- tapOn: Search your country
- inputText: India
- scrollUntilVisible:
    element:
      text: India
- doubleTapOn: 🇮🇳, +91, India
- assertVisible: 🇮🇳, +91
- tapOn:
    text: Enter phone number
    index: 1

- inputText: '9389517813'
- tapOn: Continue

- tapOn:
    point: 3%,22%

- inputText: 123456
- waitForAnimationToEnd
- tapOn: Verify

- assertVisible:
    text: Enter Valid OTP!
    index: 1

#Resend Otp

- tapOn: Resend Code

- tapOn:
    point: 2%,19%

- waitForAnimationToEnd:
    timeout: 10000

- inputText: '87133'

- tapOn: Verify
