appId: com.crewcam

name: Offline Mode flow
tags:
  - Complete Offline Mode
  - Sanity Testing

# Test flow: Launch app -> Login with direct gamil -> skip the app tour
#      -> click on the profile icon -> redirect to offline mode.
---
# Launches the application and clears its state.

- launchApp:
    clearState: true

# Login with google sign up directly with out using OTP

- extendedWaitUntil:
    visible: 'Continue with Phone Number'
    timeout: 10000
- tapOn:
    point: 48%,78%

- assertVisible: Choose an account

- tapOn:
    id: account_name

- extendedWaitUntil:
    visible: Tap "+" to create a new project.
    timeout: 10000

- tapOn: Skip

- tapOn: KG

- extendedWaitUntil:
    visible: My Profile
    timeout: 10000

- tapOn:
    point: 67%,19%

#Offline Mode Screen

- extendedWaitUntil:
    visible: Offline Mode
    timeout: 10000

- tapOn: New Build Testing
- assertVisible: New Build Testing
- back

- tapOn: 28 July 2025
- assertVisible: 28 July 2025
- back

- tapOn: Uploads in queue
- assertVisible: 'Posts in queue: 0'
- tapOn: Uploads in queue

- assertVisible: Create post
- tapOn: Create post

- assertVisible: High Resolution
- tapOn: 
- assertVisible: Select Image Quality

- assertVisible: Lightning, Smallest image size and fastest upload. Use if concerned about data and speed.
- assertVisible: High Resolution, Balances high resolution, image quality, size and speed
- assertVisible: Ultra HD, High resolution and image size but slower uploading speed
- tapOn: Lightning, Smallest image size and fastest upload. Use if concerned about data and speed.
- tapOn: Continue

- assertVisible: Lightning

#click images
- tapOn:
    point: 44%,87%
- tapOn:
    point: 44%,87%
- tapOn:
    point: 44%,87%
- tapOn:
    point: 44%,87%

- tapOn: Done

#Create post details
- assertVisible: New Post
- tapOn: , Select project
- assertVisible: Phase 5 Testing
- tapOn: Phase 5 Testing
- tapOn: Enter description here
- inputText: 'Hello description box'
- tapOn: Upload
- assertVisible:
    text: Post will be uploaded shortly
    index: 1
- assertVisible: 'Posts in queue: 1,'

- assertVisible:
    id: stepDescription
