appId: com.crewcam
tags:
  - Somke Testing
---
- launchApp:
    clearState: true

- tapOn:
    point: 38%,77%

- tapOn:
    id: account_name

- waitForAnimationToEnd:
    timeout: 5000

#Home Screen
- tapOn: Skip

#New Post
- tapOn:
    point: 35%,81%

#Camera Open

- tapOn:
    point: 44%,88%

- tapOn:
    point: 17%,6%

#Open image container
- tapOn:
    point: 10%,88%

# click on Done
- assertVisible: Done
- tapOn: Done

# assertion:- New Post
- assertVisible: New Post
- tapOn: , Select project
- tapOn: Search here
- inputText: New Build Testing
- assertVisible:
    text: New Build Testing
    index: 1
- tapOn:
    text: New Build Testing
    index: 1

# Write description
- assertVisible: Enter description here
- inputText: New Build testing project

# Click on Upload button

- tapOn: Upload
- assertVisible: Grid View
